src/test/dustdoc-ui/check-fail.stderr
error: missing documentation for a function
  --> $DIR/check-fail.rs:11:1
   |
LL | pub fn foo() {}
   | ^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/check-fail.rs:3:9
   |
LL | #![deny(missing_docs)]
   |         ^^^^^^^^^^^^

error: missing code example in this documentation
  --> $DIR/check-fail.rs:11:1
   |
LL | pub fn foo() {}
   | ^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/check-fail.rs:4:9
   |
LL | #![deny(dustdoc::all)]
   |         ^^^^^^^^^^^^
   = note: `#[deny(dustdoc::missing_doc_code_examples)]` implied by `#[deny(dustdoc::all)]`

error: unknown attribute `testharness`. Did you mean `test_harness`?
  --> $DIR/check-fail.rs:6:1
   |
LL | / //! ```dust,testharness
LL | |
LL | | //! let x = 12;
LL | | //! ```
   | |_______^
   |
note: the lint level is defined here
  --> $DIR/check-fail.rs:4:9
   |
LL | #![deny(dustdoc::all)]
   |         ^^^^^^^^^^^^
   = note: `#[deny(dustdoc::invalid_codeblock_attributes)]` implied by `#[deny(dustdoc::all)]`
   = help: the code block will either not be tested if not marked as a dust one or the code will be wrapped inside a main function

error: unknown attribute `testharness`. Did you mean `test_harness`?
  --> $DIR/check-fail.rs:15:1
   |
LL | / /// hello
LL | |
LL | | ///
LL | | /// ```dust,testharness
LL | | /// let x = 12;
LL | | /// ```
   | |_______^
   |
   = help: the code block will either not be tested if not marked as a dust one or the code will be wrapped inside a main function

error: aborting due to 4 previous errors

