src/test/dustdoc-ui/check-fail.ds
// compile-flags: -Z unstable-options --check

#![deny(missing_docs)]
#![deny(dustdoc::all)]

//! ```dust,testharness
//~^ ERROR
//! let x = 12;
//! ```

pub fn foo() {}
//~^ ERROR
//~^^ ERROR

/// hello
//~^ ERROR
///
/// ```dust,testharness
/// let x = 12;
/// ```
pub fn bar() {}
